--- a/src/sass/3/openeyes/__config-pro.scss
+++ b/src/sass/3/openeyes/__config-pro.scss
@@ -146,7 +146,8 @@ $oe-ed3-blue:			rgb(218,230,241); 		// note: used in Elements too!
 $oe-ed3-panels: 		shade( $oe-ed3-blue, 10 );
 $oe-ed3-text:			rgb(50,50,60);
 $oe-ed3-btn:            #118afb;
-$oe-ed3-icon-area: #BDCDDE;
+$oe-ed3-icon-area: #bdcdde;
+$oe-ed3-doo-bg: #ccc;
 
 
 
