--- a/src/sass/3/openeyes/components/eyedraw/v3/__all.scss
+++ b/src/sass/3/openeyes/components/eyedraw/v3/__all.scss
@@ -10,7 +10,9 @@
 
 @import "ed3-doodles/_all";
 @import "ed3-editor/_all";
-@import "ed3-report";
+@import "ed3-notes";
+
+@import "ed3-viewer";
 
 
 
