--- a/src/sass/3/openeyes/components/eyedraw/v3/ed3-doodles/_doo-btn.scss
+++ b/src/sass/3/openeyes/components/eyedraw/v3/ed3-doodles/_doo-btn.scss
@@ -6,7 +6,7 @@
 	position: relative;
 	display: inline-block;
 	width: $ed3-i-width;
-	background: #ccc;
+	background: $oe-ed3-doo-bg;
 	margin: 0 1px 1px 0;
 	cursor: pointer;
 
