--- a/src/sass/3/openeyes/components/eyedraw/v3/ed3-editor/__all.scss
+++ b/src/sass/3/openeyes/components/eyedraw/v3/ed3-editor/__all.scss
@@ -6,10 +6,9 @@
 // up until now it's just been hacking the v1
 
 @import "_base";
-@import "doodle-stack";
+@import "doodle-nav";
 @import "doo-cxt/_all";
-@import "tools";
-@import "reset";
+@import "ed3-tools";
 
 
 
