--- a/src/sass/3/openeyes/components/eyedraw/v3/_inputs.scss
+++ b/src/sass/3/openeyes/components/eyedraw/v3/_inputs.scss
@@ -7,18 +7,22 @@
 	input,
 	textarea,
 	select {
+		color: #000;
 		background-color: #fff;
-		color:#000;
 		@include font-size(11);
 	}
 
+	select {
+		padding:0 5px;
+	}
+
 	label.highlight {
-		color:#000;
+		color: #000;
 		background: #fff;
 
 		&:hover,
 		&:focus {
-			background:$oe-ed3-icon-area;
+			background: $oe-ed3-icon-area;
 		}
 	}
 
