--- a/src/sass/3/openeyes/components/eyedraw/v3/ed3-editor/doo-cxt/__all.scss
+++ b/src/sass/3/openeyes/components/eyedraw/v3/ed3-editor/doo-cxt/__all.scss
@@ -7,8 +7,9 @@
 
 @import "_base";
 @import "doo-hd";
-@import "doo-opts";
-@import "opt";
+@import "opts";
+@import "opt-btns";
+@import "doo-opt";
 
 
  
