--- a/src/sass/3/openeyes/components/eyedraw/v3/ed3-editor/doo-cxt/_opts.scss
+++ b/src/sass/3/openeyes/components/eyedraw/v3/ed3-editor/doo-cxt/_opts.scss
@@ -1,12 +1,16 @@
 // ** Copyright (C) 2020, OpenEyes Foundation. This file is part of OpenEyes.
 // ** OpenEyes is free software; and is distributed, WITHOUT ANY WARRANTY under the terms of AGPL 3.0 licence.
 
-// wrapped in the ".stack"
 .doo-cxt {
-	margin: 5px 2px 5px 0;
-	color: $oe-ed3-text;
+	.opts {
+		display: none;
+		padding: 5px;
+		border: 2px solid #f8f8f8;
+		border-top: none;
+	}
+
+	// edit (user selected) doodle
+	&.edit .opts {
+		display: block;
+	}
 }
-
-
-
-
