Event icon bug fixed

--- a/src/sass/3/openeyes/_icons-events.scss
+++ b/src/sass/3/openeyes/_icons-events.scss
@@ -46,5 +46,5 @@
 }
 
 // SCSS file automatically created by SpriteSmith
-@import "icons-events-sprites";
+@import "../../spritesheet/icons-events-sprites";
 
