Layout fix for sidepanel with using multi-select lists

--- a/src/sass/3/openeyes/_icons.scss
+++ b/src/sass/3/openeyes/_icons.scss
@@ -269,7 +269,7 @@
 		"exclamation-red": "exclamation-red",
 		"warning": "warning", // RED Risk/Alert triangle
 		"warning-none": "warning-none",
-		"cross-red": "cross-red",
+		"cross-red": "cross-red"
 	);
 
 	$eyedraw_icons: (
