--- a/src/sass/3/openeyes/components/popups/__all.scss
+++ b/src/sass/3/openeyes/components/popups/__all.scss
@@ -27,5 +27,8 @@
 @import "content-specific/signature-pad";
 @import "content-specific/tabular-data";
 
+// standardised (v5) version of Add new event
+@import "add-new-event/standardised/_all";
+
 // attachments
 @import "attachments/popup-attachment"; 
