--- a/src/sass/3/openeyes/components/sem/elements/__all.scss
+++ b/src/sass/3/openeyes/components/sem/elements/__all.scss
@@ -25,6 +25,7 @@
 @import "typography";					// None, Note, Large-text, etc
 @import "pro-data-view";				// pro/full view	
 @import "restrict-data-shown";
+@import "eye-icon-header";
 
 // Eyedraw (v2.5)
 @import "eyedraw/_ed25";
