Sass re-organised, extra classes added for icons

--- a/src/sass/3/openeyes/components/popups/__all.scss
+++ b/src/sass/3/openeyes/components/popups/__all.scss
@@ -30,5 +30,8 @@
 // standardised (v5) version of Add new event
 @import "add-new-event/standardised/_all";
 
+// when updated to v5 version __base can be removed
+@import "events-user-trail/_all";
+
 // attachments
 @import "attachments/popup-attachment"; 
