--- a/src/sass/3/openeyes/components/popups/events-user-trail/__base.scss
+++ b/src/sass/3/openeyes/components/popups/events-user-trail/__base.scss
@@ -2,6 +2,7 @@
 // ** OpenEyes is free software; and is distributed, WITHOUT ANY WARRANTY under the terms of AGPL 3.0 licence.
 
 
+// in V5 this is no longer needed!
 .oe-events-user-trail {
 	// slight tweaks to generic "oe-popup"
 	
