Update to allow checkbox from Clinic Manager to be used in Elements

--- a/src/sass/3/openeyes/_icons.scss
+++ b/src/sass/3/openeyes/_icons.scss
@@ -158,6 +158,7 @@
 		"remove": "remove",
 		"remove-circle": "remove-circle",
 		"duplicate": "duplicate",
+		"copy-forward": "copy-forward",
 		"info": "info",
 		"info-blue": "info-blue",
 		"eye": "eye",
@@ -175,10 +176,10 @@
 		"increase-height": "increase-height",
 		"increase-height-orange": "increase-height-orange",
 		"downup": "downup",
-		"history": "rotate-left", // rotate-left
-		"rewind": "rotate-left", // rotate-left
-		"rotate-left": "rotate-left", // rotate-left
-		"forward": "rotate-right", // rotate-right
+		"history": "rotate-left",       // rotate-left
+		"rewind": "rotate-left",        // rotate-left
+		"rotate-left": "rotate-left",   // rotate-left
+		"forward": "rotate-right",      // rotate-right
 		"rotate-right": "rotate-right", // rotate-right
 		"tick": "tick",
 		"triangle": "triangle",
