--- a/src/sass/3/openeyes/components/popups/__all.scss
+++ b/src/sass/3/openeyes/components/popups/__all.scss
@@ -34,4 +34,7 @@
 @import "events-user-trail/_all";
 
 // attachments
-@import "attachments/popup-attachment"; 
+@import "attachments/popup-attachment";
+
+// user activity history
+@import "user-activity-history/element-history";
