--- a/src/sass/3/openeyes/components/popups/attachments/_popup-attachment.scss
+++ b/src/sass/3/openeyes/components/popups/attachments/_popup-attachment.scss
@@ -44,7 +44,7 @@
 	.file-attachment-content {
 		margin:50px 0 ;
 		height:calc(100vh - 100px);
-		background:transparent url() center center no-repeat;
+		background:transparent center center no-repeat;
 		background-size: contain;
 		
 		overflow: auto;
