--- a/src/sass/3/openeyes/components/sem/__all.scss
+++ b/src/sass/3/openeyes/components/sem/__all.scss
@@ -7,12 +7,13 @@
 @import "main-event"; 			// <main> wrapper for SEM
 @import "event-header/_all"; 		// Event Title, Event Extra info, Audit trail etc
 @import "event-footer-actions"; // buttons at the end of the event
-@import "oe-audit-trail-popup";	// User audit trail popup
 
 @import "removed-event-watermark"; // Viewing removed Event needs this.
 
 @import "sidebar-header"; 		// SEM sidebar
-@import "sidebar/_all";		
+@import "sidebar/_all";
+
+@import "header-icon-btns";
 
 @import "elements/_all"; 		// All aspects of Elements
 
