--- a/src/sass/3/openeyes/components/sem/_main-event.scss
+++ b/src/sass/3/openeyes/components/sem/_main-event.scss
@@ -8,20 +8,39 @@
 	position:relative;
 	background: $oe-sem-main-event-bg;
 	color:$oe-text;
-	padding:8px 0 40px 0; 
+	padding:0 0 40px 0; // 40px allows for banner if shown
 	@include font-size(12);
 	line-height:1.5;
 	
 	// 2 main classes &.view and &.edit 
 	// are available but currently unused
 	
-	// Event title <h2>
+	// Event title <h2>, up to v4, still support
+	// To help with UAH adjusted the DOM in iDG concept mockup
 	.event-title {
 		@include font-size(15);
 		font-weight:$oe-font-medium;
 		color:$oe-text-highlight;
-		padding:0 0 8px 11px;
+		padding:8px 0 8px 11px;
 	}
+
+	// shift <h2> into a wrapper
+	.event-details {
+		@include flex(center, flex-start);
+		height:$oe-event-header-height;
+		.event-title {
+			padding:0;
+			padding:0 11px;
+		}
+
+		// increase i to button size:
+		.oe-i {
+			width: $oe-event-header-height;
+			height: $oe-event-header-height;
+		}
+	}
+
+
 	
 	// event specific elements within the Event header space
 	// currently for injection:
