--- a/src/sass/3/openeyes/components/whiteboard/_wb3.scss
+++ b/src/sass/3/openeyes/components/whiteboard/_wb3.scss
@@ -52,7 +52,7 @@
 				display:flex;
 				justify-content:flex-start;
 				align-content: center;
-				padding:3px 0 4px 8px;
+				padding:3px 0 4px 0.5em;
 				margin:0 0 5px 0;
 				
 				font-size: $wb3-font-header;
