Minor UI improvements for Correspondence updates

--- a/src/sass/3/openeyes/components/sem/elements/_typography.scss
+++ b/src/sass/3/openeyes/components/sem/elements/_typography.scss
@@ -25,6 +25,7 @@
 		@include font-size(14); // match title
 		color: $oe-element-headers;
 		font-weight: $oe-font-light;
+		margin:0 0 3px 0;
 	}
 
 	// 'none' and 'none'.
