--- a/src/sass/3/openeyes/components/sem/elements/_tables.scss
+++ b/src/sass/3/openeyes/components/sem/elements/_tables.scss
@@ -96,7 +96,18 @@
 
 				}
 			}
+		}
 
+	// with elements with long tables this may be useful!
+		&.highlight-rows {
+			tbody {
+				tr {
+					&:hover,
+					&:focus {
+						background:$oe-bg-highlight;
+					}
+				}
+			}
 		}
 
 		// initially, when doing all the data layouts
