Minor fix to anchor hinting

--- a/src/sass/3/openeyes/ui/typography/_anchor.scss
+++ b/src/sass/3/openeyes/ui/typography/_anchor.scss
@@ -9,6 +9,10 @@ a {
 	
 	&.hint {
 		text-decoration: underline;
+		// this is because I foolishly used hint in ".button" as well :(
+		&.button {
+			text-decoration: none;
+		}
 	}
 
 	&:hover, &:focus, &:active {
