--- a/src/sass/3/openeyes/ui/_buttons.scss
+++ b/src/sass/3/openeyes/ui/_buttons.scss
@@ -134,7 +134,7 @@
 		
 		&.disabled,
 		&.inactive {
-			background-color: none;
+			background-color: transparent;
 			border:none !important;
 		}
 		
@@ -230,12 +230,6 @@
 			color: #fff;
 			background: $oe-btn-red;
 		}
-	}	
-	
-	// devs have added 'hint' to <a> styled as 'button'
-	// override this
-	a.hint {
-		text-decoration: none;
 	}
 	
 	
