--- a/src/sass/3/openeyes/ui/_oe-step-progress.scss
+++ b/src/sass/3/openeyes/ui/_oe-step-progress.scss
@@ -6,6 +6,11 @@
 	display:inline-flex;
 	flex-wrap: wrap;
 
+	// add for letters in Partial booking lists
+	&.nowrap {
+		flex-wrap: nowrap;
+	}
+
 	&.pad {
 		margin:0 15px;
 	}
