Fix: display icons as white within buttons in light theme

--- a/src/sass/3/base/_h5bp.scss
+++ b/src/sass/3/base/_h5bp.scss
@@ -9,12 +9,14 @@
 // Customize the background color to match your design.
 
 ::-moz-selection {
-    background: #89d8e9;
+	color:#fff;
+    background: #009;
     text-shadow: none;
 }
 
 ::selection {
-    background: #89d8e9;
+	color:#fff;
+	background: #009;
     text-shadow: none;
 }
 
