--- a/src/sass/3/openeyes/__config-classic.scss
+++ b/src/sass/3/openeyes/__config-classic.scss
@@ -66,10 +66,10 @@ $oe-dark-btn-green-hint:		shade( $oe-dark-btn-green,30 );
 $oe-dark-btn-red-hint:		shade( $oe-dark-btn-red,30 );
 
 $oe-btn-text-on-hint: 	rgba(255,255,255,0.8);
-$oe-btn-default:		rgb(235,235,240);
+$oe-btn-default: #E6E6FF; // 235,235,240
 $oe-btn-selected:		rgb(220,220,230);
 $oe-btn-event-header: 	tint($oe-grey,10); // event header buttons need to work like tabs
-$oe-btn-blue:			rgb(40,110,224);
+$oe-btn-blue: rgb(40,110,224);
 $oe-btn-green:			rgb(14,154,51);
 $oe-btn-red:			rgb(225,57,57);
 // button hints
@@ -78,6 +78,9 @@ $oe-btn-green-hint: 	shade( $oe-btn-green,10% );
 $oe-btn-red-hint: 		shade( $oe-btn-red,10% );
 // button shades
 $oe-btn-blue-dark: 		shade( $oe-btn-blue, 25% );
+
+// icons within button need inverting, in classic
+$oe-btn-icon-hover: invert(100);
 
 $oe-dark-popup-bg:		rgb(77,75,75);
 $oe-popup-bg:			rgb(245,245,245); // tool-tip, add-select-search, element-search-popup
