--- a/src/sass/3/openeyes/components/sem/elements/__all.scss
+++ b/src/sass/3/openeyes/components/sem/elements/__all.scss
@@ -43,6 +43,7 @@
 @import "specific/botox/_all";  // injection management
 @import "specific/attachments";
 @import "specific/question-answer";
+@import "specific/diagnosis-mgmt";
 
 // IDG concept work
 @import "idg/reduce-height";
