--- a/src/sass/3/openeyes/ui/_buttons.scss
+++ b/src/sass/3/openeyes/ui/_buttons.scss
@@ -30,6 +30,7 @@
 	cursor: pointer;
 	
 	// sizes - standard:
+	margin:1px 0;
 	padding:0 8px;	// increase hit area
 	height:24px; 	// matches inputs heights
 	
