--- a/src/sass/3/openeyes/_icons.scss
+++ b/src/sass/3/openeyes/_icons.scss
@@ -176,10 +176,10 @@
 		"increase-height": "increase-height",
 		"increase-height-orange": "increase-height-orange",
 		"downup": "downup",
-		"history": "rotate-left",       // rotate-left
-		"rewind": "rotate-left",        // rotate-left
-		"rotate-left": "rotate-left",   // rotate-left
-		"forward": "rotate-right",      // rotate-right
+		"history": "rotate-left", // rotate-left
+		"rewind": "rotate-left", // rotate-left
+		"rotate-left": "rotate-left", // rotate-left
+		"forward": "rotate-right", // rotate-right
 		"rotate-right": "rotate-right", // rotate-right
 		"tick": "tick",
 		"triangle": "triangle",
@@ -230,18 +230,25 @@
 		"crying": "crying",
 		"eyelat-L": "lat-L", // monochromatic Eye Lat icons:
 		"eyelat-R": "lat-R", // monochromatic Eye Lat icons:
-		"laterality.R": "lat-R-green", // note: laterality icon set uses TWO classes: e.g class="oe-i laterality R"
+		"lat-R": "lat-R-green",
+		"lat-L": "lat-L-red",
+		"lat-n": "lat-NA",
+		"lat-Ri": "lat-R-inactive",
+		"lat-Li": "lat-L-inactive",
+		// note: laterality icon set did use TWO classes: e.g class="oe-i laterality R"
+		"laterality.R": "lat-R-green",
 		"laterality.L": "lat-L-red",
 		"laterality.NA": "lat-NA",
-		"laterality.Ri": "lat-R-inactive",
-		"laterality.Li": "lat-L-inactive",
 		"beo": "beo", // Both Eyes Open
 		"NA":"lat-NA", // basic a grey dot, used with Systemic icon
 		"patient": "patient", // nav icons that may be required in the IU
 		"trials": "trials",
 		"save": "save",
 		"save-blue": "save-blue",
-		"save-plus": "save-plus",
+		"save-plus": "add",
+		"add": "add",
+		"add-blue": "add-blue",
+		"edit-blue": "edit-blue",
 		"cancel": "cancel",
 		"finish": "finish",
 		"mpr": "mpr",
@@ -294,7 +301,7 @@
 	$used-in-frame: "laterality.R", "laterality.L", "laterality.NA", "laterality.Ri", "laterality.Li", "d-slash", "line-break", "direction-right", "direction-right-circle", "person", "comments", "comments-added", "comments-who", "info", "child-arrow", "audit-trail", "drug-rx", "remove-circle", "plus-circle", "pencil", "save", "more-h", "menu", "change", "injection";
 
 	// these icons need to always be at full opacity by default
-	$no-opacity: "laterality.R", "laterality.L", "laterality.NA", "laterality.Ri", "laterality.Li", "beo", "doubt-active", "circle-green", "circle-yellow", "circle-amber", "circle-orange", "circle-red", "circle-grey", "flag-green", "flag-amber", "flag-orange", "flag-red", "flag-grey", "triangle-green", "triangle-amber", "triangle-orange", "triangle-red", "triangle-grey", "triangle-urgent", "mpr", "mpr-red", "mpr-amber", "mpr-green", "exclamation-green", "exclamation-amber", "exclamation-orange", "exclamation-red", "tick-green", "cross-red", "warning", "warning-none",
+	$no-opacity: "laterality.R", "laterality.L", "laterality.NA", "lat-R", "lat-L", "lat-n", "lat-Ri", "lat-Li", "beo", "doubt-active", "circle-green", "circle-yellow", "circle-amber", "circle-orange", "circle-red", "circle-grey", "flag-green", "flag-amber", "flag-orange", "flag-red", "flag-grey", "triangle-green", "triangle-amber", "triangle-orange", "triangle-red", "triangle-grey", "triangle-urgent", "mpr", "mpr-red", "mpr-amber", "mpr-green", "exclamation-green", "exclamation-amber", "exclamation-orange", "exclamation-red", "tick-green", "cross-red", "warning", "warning-none",
 	"person-green";
 
 	// @mixin - build specific icon classes
