--- a/src/sass/3/openeyes/ui/lists/__base.scss
+++ b/src/sass/3/openeyes/ui/lists/__base.scss
@@ -7,7 +7,7 @@ ul {
 	
 	li {
 		padding:0;
-		margin:0; // do not add any list styling here... to many casscades!
+		margin:0; // do not add any list styling here... to many cascades!
 		line-height:1.2;
 	}
 }
