--- a/src/sass/spritesheet/_icons-events-sprites.scss
+++ b/src/sass/spritesheet/_icons-events-sprites.scss
@@ -420,7 +420,7 @@ background-position: -57px -133px;
 background-size: 456px 418px;
 background-position: -114px -266px;
 }}
-.i-aB {
+.i-aA {
 background-size: 228px 209px;
 background-position: -76px -133px;
 &.large {
@@ -441,472 +441,444 @@ background-position: -114px -133px;
 background-size: 456px 418px;
 background-position: -228px -266px;
 }}
-.i-aE {
+.i-aM {
 background-size: 228px 209px;
 background-position: -133px -133px;
 &.large {
 background-size: 456px 418px;
 background-position: -266px -266px;
 }}
-.i-aM {
+.i-aV {
 background-size: 228px 209px;
 background-position: -152px 0px;
 &.large {
 background-size: 456px 418px;
 background-position: -304px 0px;
 }}
-.i-aN {
+.i-aW {
 background-size: 228px 209px;
 background-position: -152px -19px;
 &.large {
 background-size: 456px 418px;
 background-position: -304px -38px;
 }}
-.i-aS {
+.i-genCiDiamond {
 background-size: 228px 209px;
 background-position: -152px -38px;
 &.large {
 background-size: 456px 418px;
 background-position: -304px -76px;
 }}
-.i-aU {
+.i-genCiDoc {
 background-size: 228px 209px;
 background-position: -152px -57px;
 &.large {
 background-size: 456px 418px;
 background-position: -304px -114px;
 }}
-.i-aW {
+.i-genCiDocHole {
 background-size: 228px 209px;
 background-position: -152px -76px;
 &.large {
 background-size: 456px 418px;
 background-position: -304px -152px;
 }}
-.i-aZ {
+.i-genCiFour {
 background-size: 228px 209px;
 background-position: -152px -95px;
 &.large {
 background-size: 456px 418px;
 background-position: -304px -190px;
 }}
-.i-genCiDiamond {
+.i-genCiGrid {
 background-size: 228px 209px;
 background-position: -152px -114px;
 &.large {
 background-size: 456px 418px;
 background-position: -304px -228px;
 }}
-.i-genCiDoc {
+.i-genCiNut {
 background-size: 228px 209px;
 background-position: -152px -133px;
 &.large {
 background-size: 456px 418px;
 background-position: -304px -266px;
 }}
-.i-genCiDocHole {
+.i-genCiSquare {
 background-size: 228px 209px;
 background-position: 0px -152px;
 &.large {
 background-size: 456px 418px;
 background-position: 0px -304px;
 }}
-.i-genCiFour {
+.i-genCiSquareDot {
 background-size: 228px 209px;
 background-position: -19px -152px;
 &.large {
 background-size: 456px 418px;
 background-position: -38px -304px;
 }}
-.i-genCiGrid {
+.i-genCiSquareSplit {
 background-size: 228px 209px;
 background-position: -38px -152px;
 &.large {
 background-size: 456px 418px;
 background-position: -76px -304px;
 }}
-.i-genCiNut {
+.i-genCiSquareWin {
 background-size: 228px 209px;
 background-position: -57px -152px;
 &.large {
 background-size: 456px 418px;
 background-position: -114px -304px;
 }}
-.i-genCiSquare {
+.i-genCiStack {
 background-size: 228px 209px;
 background-position: -76px -152px;
 &.large {
 background-size: 456px 418px;
 background-position: -152px -304px;
 }}
-.i-genCiSquareDot {
+.i-genCiTarget {
 background-size: 228px 209px;
 background-position: -95px -152px;
 &.large {
 background-size: 456px 418px;
 background-position: -190px -304px;
 }}
-.i-genCiSquareSplit {
+.i-genCoDiamond {
 background-size: 228px 209px;
 background-position: -114px -152px;
 &.large {
 background-size: 456px 418px;
 background-position: -228px -304px;
 }}
-.i-genCiSquareWin {
+.i-genCoDoc {
 background-size: 228px 209px;
 background-position: -133px -152px;
 &.large {
 background-size: 456px 418px;
 background-position: -266px -304px;
 }}
-.i-genCiStack {
+.i-genCoDocHole {
 background-size: 228px 209px;
 background-position: -152px -152px;
 &.large {
 background-size: 456px 418px;
 background-position: -304px -304px;
 }}
-.i-genCiTarget {
+.i-genCoFour {
 background-size: 228px 209px;
 background-position: -171px 0px;
 &.large {
 background-size: 456px 418px;
 background-position: -342px 0px;
 }}
-.i-genCoDiamond {
+.i-genCoGrid {
 background-size: 228px 209px;
 background-position: -171px -19px;
 &.large {
 background-size: 456px 418px;
 background-position: -342px -38px;
 }}
-.i-genCoDoc {
+.i-genCoNut {
 background-size: 228px 209px;
 background-position: -171px -38px;
 &.large {
 background-size: 456px 418px;
 background-position: -342px -76px;
 }}
-.i-genCoDocHole {
+.i-genCoSquare {
 background-size: 228px 209px;
 background-position: -171px -57px;
 &.large {
 background-size: 456px 418px;
 background-position: -342px -114px;
 }}
-.i-genCoFour {
+.i-genCoSquareDot {
 background-size: 228px 209px;
 background-position: -171px -76px;
 &.large {
 background-size: 456px 418px;
 background-position: -342px -152px;
 }}
-.i-genCoGrid {
+.i-genCoSquareSplit {
 background-size: 228px 209px;
 background-position: -171px -95px;
 &.large {
 background-size: 456px 418px;
 background-position: -342px -190px;
 }}
-.i-genCoNut {
+.i-genCoSquareWin {
 background-size: 228px 209px;
 background-position: -171px -114px;
 &.large {
 background-size: 456px 418px;
 background-position: -342px -228px;
 }}
-.i-genCoSquare {
+.i-genCoStack {
 background-size: 228px 209px;
 background-position: -171px -133px;
 &.large {
 background-size: 456px 418px;
 background-position: -342px -266px;
 }}
-.i-genCoSquareDot {
+.i-genCoTarget {
 background-size: 228px 209px;
 background-position: -171px -152px;
 &.large {
 background-size: 456px 418px;
 background-position: -342px -304px;
 }}
-.i-genCoSquareSplit {
+.i-genImDiamond {
 background-size: 228px 209px;
 background-position: 0px -171px;
 &.large {
 background-size: 456px 418px;
 background-position: 0px -342px;
 }}
-.i-genCoSquareWin {
+.i-genImDoc {
 background-size: 228px 209px;
 background-position: -19px -171px;
 &.large {
 background-size: 456px 418px;
 background-position: -38px -342px;
 }}
-.i-genCoStack {
+.i-genImDocHole {
 background-size: 228px 209px;
 background-position: -38px -171px;
 &.large {
 background-size: 456px 418px;
 background-position: -76px -342px;
 }}
-.i-genCoTarget {
+.i-genImFour {
 background-size: 228px 209px;
 background-position: -57px -171px;
 &.large {
 background-size: 456px 418px;
 background-position: -114px -342px;
 }}
-.i-genImDiamond {
+.i-genImGrid {
 background-size: 228px 209px;
 background-position: -76px -171px;
 &.large {
 background-size: 456px 418px;
 background-position: -152px -342px;
 }}
-.i-genImDoc {
+.i-genImNut {
 background-size: 228px 209px;
 background-position: -95px -171px;
 &.large {
 background-size: 456px 418px;
 background-position: -190px -342px;
 }}
-.i-genImDocHole {
+.i-genImSquare {
 background-size: 228px 209px;
 background-position: -114px -171px;
 &.large {
 background-size: 456px 418px;
 background-position: -228px -342px;
 }}
-.i-genImFour {
+.i-genImSquareDot {
 background-size: 228px 209px;
 background-position: -133px -171px;
 &.large {
 background-size: 456px 418px;
 background-position: -266px -342px;
 }}
-.i-genImGrid {
+.i-genImSquareSplit {
 background-size: 228px 209px;
 background-position: -152px -171px;
 &.large {
 background-size: 456px 418px;
 background-position: -304px -342px;
 }}
-.i-genImNut {
+.i-genImSquareWin {
 background-size: 228px 209px;
 background-position: -171px -171px;
 &.large {
 background-size: 456px 418px;
 background-position: -342px -342px;
 }}
-.i-genImSquare {
+.i-genImStack {
 background-size: 228px 209px;
 background-position: -190px 0px;
 &.large {
 background-size: 456px 418px;
 background-position: -380px 0px;
 }}
-.i-genImSquareDot {
+.i-genImTarget {
 background-size: 228px 209px;
 background-position: -190px -19px;
 &.large {
 background-size: 456px 418px;
 background-position: -380px -38px;
 }}
-.i-genImSquareSplit {
+.i-genMiDiamond {
 background-size: 228px 209px;
 background-position: -190px -38px;
 &.large {
 background-size: 456px 418px;
 background-position: -380px -76px;
 }}
-.i-genImSquareWin {
+.i-genMiDoc {
 background-size: 228px 209px;
 background-position: -190px -57px;
 &.large {
 background-size: 456px 418px;
 background-position: -380px -114px;
 }}
-.i-genImStack {
+.i-genMiDocHole {
 background-size: 228px 209px;
 background-position: -190px -76px;
 &.large {
 background-size: 456px 418px;
 background-position: -380px -152px;
 }}
-.i-genImTarget {
+.i-genMiFour {
 background-size: 228px 209px;
 background-position: -190px -95px;
 &.large {
 background-size: 456px 418px;
 background-position: -380px -190px;
 }}
-.i-genMiDiamond {
+.i-genMiGrid {
 background-size: 228px 209px;
 background-position: -190px -114px;
 &.large {
 background-size: 456px 418px;
 background-position: -380px -228px;
 }}
-.i-genMiDoc {
+.i-genMiNut {
 background-size: 228px 209px;
 background-position: -190px -133px;
 &.large {
 background-size: 456px 418px;
 background-position: -380px -266px;
 }}
-.i-genMiDocHole {
+.i-genMiSquare {
 background-size: 228px 209px;
 background-position: -190px -152px;
 &.large {
 background-size: 456px 418px;
 background-position: -380px -304px;
 }}
-.i-genMiFour {
+.i-genMiSquareDot {
 background-size: 228px 209px;
 background-position: -190px -171px;
 &.large {
 background-size: 456px 418px;
 background-position: -380px -342px;
 }}
-.i-genMiGrid {
+.i-genMiSquareSplit {
 background-size: 228px 209px;
 background-position: 0px -190px;
 &.large {
 background-size: 456px 418px;
 background-position: 0px -380px;
 }}
-.i-genMiNut {
+.i-genMiSquareWin {
 background-size: 228px 209px;
 background-position: -19px -190px;
 &.large {
 background-size: 456px 418px;
 background-position: -38px -380px;
 }}
-.i-genMiSquare {
+.i-genMiStack {
 background-size: 228px 209px;
 background-position: -38px -190px;
 &.large {
 background-size: 456px 418px;
 background-position: -76px -380px;
 }}
-.i-genMiSquareDot {
+.i-genMiTarget {
 background-size: 228px 209px;
 background-position: -57px -190px;
 &.large {
 background-size: 456px 418px;
 background-position: -114px -380px;
 }}
-.i-genMiSquareSplit {
+.i-genNuDiamond {
 background-size: 228px 209px;
 background-position: -76px -190px;
 &.large {
 background-size: 456px 418px;
 background-position: -152px -380px;
 }}
-.i-genMiSquareWin {
+.i-genNuDoc {
 background-size: 228px 209px;
 background-position: -95px -190px;
 &.large {
 background-size: 456px 418px;
 background-position: -190px -380px;
 }}
-.i-genMiStack {
+.i-genNuDocHole {
 background-size: 228px 209px;
 background-position: -114px -190px;
 &.large {
 background-size: 456px 418px;
 background-position: -228px -380px;
 }}
-.i-genMiTarget {
+.i-genNuFour {
 background-size: 228px 209px;
 background-position: -133px -190px;
 &.large {
 background-size: 456px 418px;
 background-position: -266px -380px;
 }}
-.i-genNuDiamond {
+.i-genNuGrid {
 background-size: 228px 209px;
 background-position: -152px -190px;
 &.large {
 background-size: 456px 418px;
 background-position: -304px -380px;
 }}
-.i-genNuDoc {
+.i-genNuNut {
 background-size: 228px 209px;
 background-position: -171px -190px;
 &.large {
 background-size: 456px 418px;
 background-position: -342px -380px;
 }}
-.i-genNuDocHole {
+.i-genNuSquare {
 background-size: 228px 209px;
 background-position: -190px -190px;
 &.large {
 background-size: 456px 418px;
 background-position: -380px -380px;
 }}
-.i-genNuFour {
+.i-genNuSquareDot {
 background-size: 228px 209px;
 background-position: -209px 0px;
 &.large {
 background-size: 456px 418px;
 background-position: -418px 0px;
 }}
-.i-genNuGrid {
+.i-genNuSquareSplit {
 background-size: 228px 209px;
 background-position: -209px -19px;
 &.large {
 background-size: 456px 418px;
 background-position: -418px -38px;
 }}
-.i-genNuNut {
+.i-genNuSquareWin {
 background-size: 228px 209px;
 background-position: -209px -38px;
 &.large {
 background-size: 456px 418px;
 background-position: -418px -76px;
 }}
-.i-genNuSquare {
+.i-genNuStack {
 background-size: 228px 209px;
 background-position: -209px -57px;
 &.large {
 background-size: 456px 418px;
 background-position: -418px -114px;
 }}
-.i-genNuSquareDot {
+.i-genNuTarget {
 background-size: 228px 209px;
 background-position: -209px -76px;
 &.large {
 background-size: 456px 418px;
 background-position: -418px -152px;
-}}
-.i-genNuSquareSplit {
-background-size: 228px 209px;
-background-position: -209px -95px;
-&.large {
-background-size: 456px 418px;
-background-position: -418px -190px;
-}}
-.i-genNuSquareWin {
-background-size: 228px 209px;
-background-position: -209px -114px;
-&.large {
-background-size: 456px 418px;
-background-position: -418px -228px;
-}}
-.i-genNuStack {
-background-size: 228px 209px;
-background-position: -209px -133px;
-&.large {
-background-size: 456px 418px;
-background-position: -418px -266px;
-}}
-.i-genNuTarget {
-background-size: 228px 209px;
-background-position: -209px -152px;
-&.large {
-background-size: 456px 418px;
-background-position: -418px -304px;
 }}
