--- a/src/sass/3/openeyes/_minimum-width-warning.scss
+++ b/src/sass/3/openeyes/_minimum-width-warning.scss
@@ -12,18 +12,14 @@
 	top:50%;
 	right:0;
 	z-index:9999;
-	
-	transform: rotate(90deg) translateY(10px) translateX(10px);
-	transform-origin: right;
-	
-	background:$oe-alert-red url( svg-dark-fixed('i/direction-up') ) top 50% right 5px no-repeat;
-	background-size:15px;
-	padding:8px 30px 5px 10px; // allow for icon
-	
-	color:rgb(255,255,255);
-	
+
+	writing-mode: vertical-rl;
+	padding:10px 8px 25px 4px; // allow for icon
+	background:bottom 5px center / 15px $oe-alert-red url( svg-dark-fixed('i/direction-right') )  no-repeat;
+
 	@include font-size(11);
 	font-weight:400;
+	color:#fff;
 	
 	display:none;
 	
@@ -31,7 +27,5 @@
 	@media only screen and (max-width: $oe-minimum-viewport-width - 1) {
 		display:block;
   	}
-	
-	
 }
 
