--- a/src/sass/3/style_oe_print.3.scss
+++ b/src/sass/3/style_oe_print.3.scss
@@ -23,7 +23,8 @@
 @import "print/tables";
 @import "print/checkbox";
 @import "print/tickbox";
-@import "print/dotted"; 
+@import "print/dotted";
+@import "print/post-sign-qr";
 
 /* font sizes */
 @import "print/type/typography";
